# meta-memory-studio

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.codex/: PLANS.md  SCRATCHPAD.md
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml  security.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/api/: drift.py  errors.py  export.py  health.py  ingest.py  memory.py  policy.py  router.py  runs.py  workspaces.py
backend/app/eval/: comparator.py  drift.py  scorer.py
backend/app/ingest/: hasher.py  pii.py  pipeline.py  validator.py
backend/app/memory/: constructor.py  retrieval.py  themes.py
backend/app/middleware/: request_context.py
backend/app/models/: __init__.py  memory.py  raw.py  runs.py
backend/app/parser/: episode_builder.py  normalizer.py
backend/app/policy/: forget.py  weight_updater.py
backend/app/schemas/: common.py  ingest.py  memory.py  runs.py
backend/app/security/: __init__.py  rate_limit.py
backend/tests/: conftest.py  test_api.py  test_drift.py  test_episode_builder.py  test_export.py  test_hasher.py  test_hierarchical_retrieval.py  test_ingest.py  test_memory_constructor.py  test_pii.py  test_weight_updater.py
docs/: ACCEPTANCE_CHECKLIST.md  API_SPEC.md  ARCHITECTURE.md  DATA_MODEL.md  DEPENDENCY_POLICY.md  EVAL_PLAN.md  INCIDENT_RESPONSE.md  MEMORY_MODEL.md  PRD.md  PRE_RELEASE_REPORT.md  PRE_RELEASE_TODO.md  RELEASE_CHECKLIST.md  RELEASE_GATE_MASTER.md  ROLLBACK.md  RUNBOOK.md  SECURITY_PRIVACY.md  THREAT_MODEL.md  TROUBLESHOOTING.md  UX_SPEC.md
examples/: demo_prompts.md
frontend/: next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
scripts/: capture_readme_gallery.sh  db_backup.sh  db_restore.sh  generate_sbom.sh  import_demo.py  release_gate.sh  retention_cleanup.sh
(+42 files in other folders)
